--- a/Task2/pom.xml
+++ b/Task2/pom.xml
@@ -22,7 +22,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13</version>
-            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.allure</groupId>
+            <artifactId>allure-java-annotations</artifactId>
+            <version>1.5.4</version>
         </dependency>
     </dependencies>
 
